--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
     <label for=sCurso>Curso</label>
     <select id=sCurso>
       <option value=null> </option>
-      <option value=1DAW id="o1DAW" onclick="unoDaw()">Primero de DAW</option>
-      <option value=2DAW id="o2DAW" onclick="dosDaw()">Segundo de DAW</option>
+      <option value=1DAW id="o1DAW" onclick="addModulo()">Primero de DAW</option>
+      <option value=2DAW id="o2DAW" onclick="addModulo()">Segundo de DAW</option>
     </select>
   </p>
 
   <p>
     <label for=iCalculo1>Calculos</label>
-    <input type=number min=0 max=10 step=1 id=iCalculo1 />
-    <input type=number min=0 max=10 step=1 id=iCalculo2 />
-    <input type=number min=0 max=10 step=1 id=iCalculo3 />
+    <input onchange="media()" type=number min=0 max=10 step=1 id=iCalculo1 />
+    <input onchange="media()" type=number min=0 max=10 step=1 id=iCalculo2 />
+    <input onchange="media()" type=number min=0 max=10 step=1 id=iCalculo3 />
     <span id=spanMedia>N/A</span>
   </p>
 
   <p>
-    <button type=button id=btnCero onclick="cero()">Poner a Cero</button>
+    <button type=button id=btnCero onclick="cero();media()">Poner a Cero</button>
     <button onclick="enviar()">Enviar</button>
   </p>
 
